--- a/css/productos.css
+++ b/css/productos.css
@@ -52,7 +52,7 @@ body {
     box-shadow: 0 8px 25px rgba(0,0,0,0.15);
 }
 
-/* IMAGEN */
+/* IMAGEN XDDD */
 .tarjeta img {
     width: 90%;
     max-width: 260px;
