--- a/css/contactanos.css
+++ b/css/contactanos.css
@@ -1,5 +1,6 @@
 body {
     background: linear-gradient(to bottom, #fff7ec, #ffe7c4);
+    font-family: "Georgia", serif;
     color: #5a3d1a;
 }
 .contacto-contenedor {
